[package]
name = "prover"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pin-project-lite = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
clap = { workspace = true }
webpki-root-certs = { workspace = true }
tlsn = { workspace = true }
